RESOLVED FIXED197655
REGRESSION(r244230): Web Automation: use null instead of empty string as success result of scripts when alert is open
https://bugs.webkit.org/show_bug.cgi?id=197655
Summary REGRESSION(r244230): Web Automation: use null instead of empty string as succ...
Carlos Garcia Campos
Reported 2019-05-07 03:59:57 PDT
This regressed in r244230, the case of an alert open while running a script is now handled in WebKit side, but an empty string is returned as a result, which is not a valid JSON serialized string. That made all user prompts tests to fail.
Attachments
Patch (1.77 KB, patch)
2019-05-07 04:08 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2019-05-07 04:08:57 PDT
Devin Rousso
Comment 2 2019-05-07 17:39:08 PDT
Comment on attachment 369274 [details] Patch rs=me
WebKit Commit Bot
Comment 3 2019-05-07 18:06:18 PDT
Comment on attachment 369274 [details] Patch Clearing flags on attachment: 369274 Committed r245046: <https://trac.webkit.org/changeset/245046>
WebKit Commit Bot
Comment 4 2019-05-07 18:06:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-05-07 18:07:17 PDT
Note You need to log in before you can comment on or make changes to this bug.